Now it creates a QRcode and show it ingame

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
     "java.configuration.updateBuildConfiguration": "interactive",
     "java.project.sourcePaths": [
         "src/io/github/pimentelleo/bukkitpix"
-    ]
+    ],
+    "java.compile.nullAnalysis.mode": "automatic",
+    "maven.view": "flat"
 }
