--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
             <id>codemc-repo</id>
             <url>https://repo.codemc.org/repository/maven-public/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -54,6 +58,12 @@
             <groupId>com.google.zxing</groupId>
             <artifactId>javase</artifactId>
             <version>3.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.rockyhawk64</groupId>
+            <artifactId>CommandPanels</artifactId>
+            <version>724d503</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
